submissions/5753b61239b14f0fb99f2f064888001c/result.txt
Compile Error:/usr/src/main.cpp:1:1: error: 'nknk' does not name a type
    1 | nknk
      | ^~~~
